# sdk.nfc-plugin-emul

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE.Apache-2.0  project.config
debian/: changelog  control  libnfc-plugin-emul-0.install.in  libnfc-plugin-emul-0.postinst.in  libnfc-plugin-emul-dev.install.in  rules
packaging/: nfc-plugin-emul.spec
src/: nfc_debug_private.h
src/oem/: oem_emul.c
